# robit_QT_homework

HW1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-HW1-Desktop-Debug/: CMakeCache.txt  HW1  Makefile  cmake_install.cmake
build-HW1-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-2212cd6f00dbe650cd05.json  cmakeFiles-v1-fdd6729d5417ad99af6f.json  codemodel-v2-eb657eee9a2c89b0bd5f.json  index-2024-10-04T11-36-04-0521.json  target-HW1-Debug-891910a68746f55123ad.json  target-HW1_autogen-Debug-f52aa78b43df3f549332.json
build-HW1-Desktop-Debug/HW1_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-HW1-Desktop-Debug/HW1_autogen/include/: ui_mainwindow.h
build-HW2-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  HW2  Makefile  cmake_install.cmake
build-HW2-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-75ffa3797da84bd88494.json  cmakeFiles-v1-174670ba89a6bd901fea.json  codemodel-v2-3d0f3beb074a5b7b981a.json  codemodel-v2-e0d566a3b8277a8e5d3e.json  index-2024-10-04T13-13-06-0094.json  index-2024-10-06T10-47-39-0843.json  target-HW2-Debug-73f45d9afd10f13ed160.json  (+2 more)
build-HW2-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-50103fc169021a2f9a0c.json  cmakeFiles-v1-5a6fcd08b3f49c3294d1.json  codemodel-v2-a6e6a14b9e143a344fdc.json  index-2024-10-06T10-37-45-0773.json  target-HW2-Debug-bae7d2a8843edd4fcfe8.json
build-HW2-Desktop-Debug/HW2_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-HW2-Desktop-Debug/HW2_autogen/include/: ui_mainwindow.h
